# webasm-jsbundlers

./: .gitignore  0.index.js  README.md  add.wasm  buildall.sh  clean.sh  cleannpm.sh  index.html  index.js  installall.sh
parcel-plugin-cargo-web/: Cargo.toml  index.js  lib.rs  package-lock.json  package.json
parcel-plugin-rustwasm/: Cargo.toml  index.html  index.js  package-lock.json  package.json
parcel-plugin-wasm.rs/: Cargo.toml  index.js  package-lock.json  package.json
rollup-plugin-rust/: Cargo.toml  index.js  lib.rs  package-lock.json  package.json  patchbuild.sh  rollup-build.config.js  rollup.config.js
webpack/: Cargo.toml  README.md  index.html  index.js  lib.rs  package-lock.json  package.json  style.sass  webpack.config.js
webpack/shaders/: F_f.glsl  F_v.glsl  bar_f.glsl  cube_f.glsl  osc_f.glsl  tri_f.glsl
