[package]
name = "wasmpack_webpack_example"
version = "0.0.1"
authors = ["Aleksey Krasnobaev"]
description = ""
repository = ""
license = ""

[lib]
crate-type = ["cdylib"]
path = "./lib.rs"

[dependencies]
js-sys = "^0.3.6"
serde = "^1.0.80"
serde_derive = "^1.0.80"
rustfft = { git = "https://github.com/FauxFaux/rustfft", branch = "bump-complex" }

[dependencies.wasm-bindgen]
version = "^0.2.29"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "^0.3.6"
features = [
  "Document",
  "Element",
  "HtmlElement",
  "Node",
  "Window",

  'AnalyserNode',
  'AudioContext',
  'AudioDestinationNode',
  'AudioNode',
  'AudioParam',
  'GainNode',
  'OscillatorNode',
  'OscillatorType',
  'PeriodicWave'
]
